Move reply texts to ReplyTextConstant